month wasnt being displayed

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,7 +1,7 @@
 es:
   date:
     formats:
-      default: '%d/%M/%Y'
+      default: '%d/%m/%Y'
       week: '%A %d de %B'
     day_names:
     - Domingo
